Fix - When focus moves to the map, the focus halo should be visible (#15378)
* Fix - When focus moves to the map, the focus halo should be visible

* rm important

--- a/src/applications/facility-locator/sass/facility-locator.scss
+++ b/src/applications/facility-locator/sass/facility-locator.scss
@@ -571,3 +571,8 @@ button.mapboxgl-ctrl-zoom-out  {
   margin-bottom: 0;
   margin-right: 0;
 }
+
+canvas.mapboxgl-canvas:focus {
+  outline: 2px solid $color-gold-light;
+  outline-offset: 2px;
+}
